--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YTMMBWFT7B"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WLKCE9D3D"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-YTMMBWFT7B');
+  gtag('config', 'G-1WLKCE9D3D');
 </script>
 </head>
 
