--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
      
-<p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoJUlzpdFyQMtd3hENjsSsYZcS3DpfEVIYoIHJ48i_5MFFZw/viewform?embedded=true" width="700" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+<p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoJUlzpdFyQMtd3hENjsSsYZcS3DpfEVIYoIHJ48i_5MFFZw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 
 <script>
 </script>
