--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G4QYNRMEMS"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213022115-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-G4QYNRMEMS');
+        gtag('config', 'UA-213022115-1');
     </script>
   
     <meta name="Survey" content="Tsinghua Ergonomics 2021 project Survey" />
